2006-10-02  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.16.2.

==================== 2.16.1 ====================

2006-10-02  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.16.1.

2006-09-04  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.16.1.

==================== 2.16.0 ====================

2006-09-04  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.16.0.

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.15.92.

==================== 2.15.91 ====================

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.15.91.

2006-07-24  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.15.91.

==================== 2.15.90 ====================

2006-07-24  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.15.90.

2006-07-11  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.15.5.

==================== 2.15.4.1 ====================

2006-07-11  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.15.4.1.

2006-07-11  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.15.5.

==================== 2.15.4 ====================

2006-07-11  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.15.4.

2006-07-11  Vincent Untz  <vuntz@gnome.org>

	* configure.in: require intltool 0.35.0

2006-05-05  Travis Watkins  <alleykat@gmail.com>

	* libmenu/desktop-entries.[ch]: add
	desktop_entry_get_launch_in_terminal
	* libmenu/gmenu-tree.[ch]: add
	gmenu_tree_directory_get_desktop_file_path,
	gmenu_tree_entry_get_launch_in_terminal
	* python/gmenu.c: add pygmenu_tree_directory_get_desktop_file_path,
	pygmenu_tree_entry_get_launch_in_terminal,
	pygmenu_tree_entry_get_is_nodisplay, FLAGS_INCLUDE_NO_DISPLAY
