@@ -1,3 +1,14 @@
+2006-11-02  Mark McLoughlin  <mark@skynet.ie>
+
+	* libmenu/desktop-entries.c: (desktop_entry_load): don't
+	load a .desktop file which contains an incorrectly encoded
+	Name key. Fixes bug #339904
+
+2006-11-02  Mark McLoughlin  <mark@skynet.ie>
+
+	* libmenu/gmenu-tree.c:
+	(gmenu_tree_entry_get_launch_in_terminal): Fix compile warning
+
 2006-10-02  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: post-release bump to 2.16.2.
